Project production_db {
  database_type: 'PostgreSQL'
  Note: 'База данных учета и контроля производственных процессов предприятия'
}

Enum specification_status {
  Draft
  Active
  Archived
}

Enum production_order_status {
  Created
  Planned
  InProgress
  Completed
  Cancelled
}

Enum production_batch_status {
  Planned
  InProgress
  Completed
  Rejected
  Cancelled
}

Enum production_line_status {
  Active
  Maintenance
  Inactive
}

Enum batch_operation_status {
  Planned
  InProgress
  Completed
  Cancelled
}

Enum quality_check_stage {
  Intermediate
  Final
}

Enum quality_check_result {
  Passed
  Failed
  Conditional
}

Enum defect_severity {
  Minor
  Major
  Critical
}


Table products {
  product_id bigint [pk, increment]
  name varchar(200) [not null]
  article varchar(50) [not null, unique]
  unit varchar(20) [not null]
  description text
  is_active boolean [not null, default: true]

  Note: 'Справочник готовой продукции предприятия'
}


Table materials {
  material_id bigint [pk, increment]
  code varchar(50) [not null, unique]
  name varchar(200) [not null]
  unit varchar(20) [not null]
  description text
  is_active boolean [not null, default: true]

  Note: 'Справочник сырья, комплектующих и упаковочных материалов'
}


Table specifications {
  specification_id bigint [pk, increment]
  product_id bigint [not null]
  version varchar(20) [not null]
  name varchar(150) [not null]
  valid_from date
  valid_to date
  status specification_status [not null, default: 'Draft']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (product_id, version) [unique]
  }

  checks {
    `valid_to >= valid_from` [name: 'chk_specification_dates']
  }

  Note: 'Версии технологических спецификаций продукции'
}


Table specification_items {
  specification_item_id bigint [pk, increment]
  specification_id bigint [not null]
  material_id bigint [not null]
  quantity_per_unit decimal(18,6) [not null]
  waste_percent decimal(5,2) [not null, default: 0]

  indexes {
    (specification_id, material_id) [unique]
  }

  checks {
    `quantity_per_unit > 0` [name: 'chk_specification_item_quantity']
    `waste_percent >= 0 AND waste_percent <= 100` [name: 'chk_waste_percent']
  }

  Note: 'Нормативный состав продукции по спецификации'
}


Table production_orders {
  production_order_id bigint [pk, increment]
  order_number varchar(50) [not null, unique]
  specification_id bigint [not null]
  planned_quantity decimal(18,3) [not null]
  planned_start_at timestamp
  planned_end_at timestamp
  status production_order_status [not null, default: 'Created']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  checks {
    `planned_quantity > 0` [name: 'chk_order_planned_quantity']
    `planned_end_at >= planned_start_at` [name: 'chk_order_dates']
  }

  Note: 'Производственные задания предприятия'
}


Table production_batches {
  batch_id bigint [pk, increment]
  production_order_id bigint [not null]
  batch_number varchar(50) [not null]
  planned_quantity decimal(18,3) [not null]
  actual_quantity decimal(18,3)
  started_at timestamp
  completed_at timestamp
  status production_batch_status [not null, default: 'Planned']

  indexes {
    (production_order_id, batch_number) [unique]
  }

  checks {
    `planned_quantity > 0` [name: 'chk_batch_planned_quantity']
    `actual_quantity >= 0` [name: 'chk_batch_actual_quantity']
    `completed_at >= started_at` [name: 'chk_batch_dates']
  }

  Note: 'Производственные партии внутри производственного заказа'
}


Table production_lines {
  production_line_id bigint [pk, increment]
  code varchar(30) [not null, unique]
  name varchar(100) [not null]
  location varchar(100)
  status production_line_status [not null, default: 'Active']
  description text

  Note: 'Производственные линии и рабочие центры'
}


Table operations {
  operation_id bigint [pk, increment]
  code varchar(30) [not null, unique]
  name varchar(100) [not null]
  description text

  Note: 'Справочник технологических операций'
}


Table employees {
  employee_id bigint [pk, increment]
  personnel_number varchar(30) [not null, unique]
  full_name varchar(150) [not null]
  position varchar(100) [not null]
  is_active boolean [not null, default: true]

  Note: 'Сотрудники, участвующие в производственном процессе'
}


Table shifts {
  shift_id bigint [pk, increment]
  shift_date date [not null]
  shift_number int [not null]
  started_at timestamp [not null]
  completed_at timestamp [not null]
  supervisor_employee_id bigint [not null]

  indexes {
    (shift_date, shift_number) [unique]
  }

  checks {
    `shift_number > 0` [name: 'chk_shift_number']
    `completed_at > started_at` [name: 'chk_shift_dates']
  }

  Note: 'Производственные смены'
}


Table batch_operations {
  batch_operation_id bigint [pk, increment]
  batch_id bigint [not null]
  operation_id bigint [not null]
  production_line_id bigint [not null]
  employee_id bigint [not null]
  shift_id bigint [not null]
  sequence_no int [not null]
  started_at timestamp
  completed_at timestamp
  processed_quantity decimal(18,3)
  status batch_operation_status [not null, default: 'Planned']

  indexes {
    (batch_id, sequence_no) [unique]
  }

  checks {
    `sequence_no > 0` [name: 'chk_operation_sequence']
    `processed_quantity >= 0` [name: 'chk_processed_quantity']
    `completed_at >= started_at` [name: 'chk_batch_operation_dates']
  }

  Note: 'Фактическое выполнение технологических операций над партией'
}


Table material_usage {
  material_usage_id bigint [pk, increment]
  batch_id bigint [not null]
  material_id bigint [not null]
  employee_id bigint [not null]
  quantity_used decimal(18,6) [not null]
  material_lot_number varchar(50)
  recorded_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  checks {
    `quantity_used > 0` [name: 'chk_material_usage_quantity']
  }

  Note: 'Фактический расход материалов при производстве партии'
}


Table quality_checks {
  quality_check_id bigint [pk, increment]
  batch_id bigint [not null]
  employee_id bigint [not null]
  check_stage quality_check_stage [not null]
  checked_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  result quality_check_result [not null]
  notes text
  measurements jsonb [not null, default: `'{}'::jsonb`]

  Note: 'Результаты контроля качества производственной партии'
}


Table defect_types {
  defect_type_id bigint [pk, increment]
  code varchar(30) [not null, unique]
  name varchar(100) [not null]
  severity defect_severity [not null]
  description text
  is_active boolean [not null, default: true]

  Note: 'Справочник типов производственного брака'
}


Table defects {
  defect_id bigint [pk, increment]
  quality_check_id bigint [not null]
  defect_type_id bigint [not null]
  quantity decimal(18,3) [not null]
  description text

  indexes {
    (quality_check_id, defect_type_id) [unique]
  }

  checks {
    `quantity > 0` [name: 'chk_defect_quantity']
  }

  Note: 'Конкретные случаи брака, обнаруженные при контроле качества'
}


/* =========================
   СВЯЗИ
   ========================= */

Ref: specifications.product_id > products.product_id [delete: restrict]

Ref: specification_items.specification_id > specifications.specification_id [delete: cascade]
Ref: specification_items.material_id > materials.material_id [delete: restrict]

Ref: production_orders.specification_id > specifications.specification_id [delete: restrict]

Ref: production_batches.production_order_id > production_orders.production_order_id [delete: restrict]

Ref: shifts.supervisor_employee_id > employees.employee_id [delete: restrict]

Ref: batch_operations.batch_id > production_batches.batch_id [delete: restrict]
Ref: batch_operations.operation_id > operations.operation_id [delete: restrict]
Ref: batch_operations.production_line_id > production_lines.production_line_id [delete: restrict]
Ref: batch_operations.employee_id > employees.employee_id [delete: restrict]
Ref: batch_operations.shift_id > shifts.shift_id [delete: restrict]

Ref: material_usage.batch_id > production_batches.batch_id [delete: restrict]
Ref: material_usage.material_id > materials.material_id [delete: restrict]
Ref: material_usage.employee_id > employees.employee_id [delete: restrict]

Ref: quality_checks.batch_id > production_batches.batch_id [delete: restrict]
Ref: quality_checks.employee_id > employees.employee_id [delete: restrict]

Ref: defects.quality_check_id > quality_checks.quality_check_id [delete: cascade]
Ref: defects.defect_type_id > defect_types.defect_type_id [delete: restrict]
